[package]
categories = ["development-tools", "development-tools::profiling"]
description = "Perf timers for Rust"
edition = "2021"
keywords = ["timer", "timing"]
license-file = "LICENSE"
name = "voxell_timer"
repository = "https://github.com/Paladynee/timer-rs"
version = "1.1.1"

[dependencies]

[lints.clippy]
absolute_paths = "warn"
alloc_instead_of_core = "warn"
allow_attributes = "warn"
arithmetic_side_effects = "warn"
as_underscore = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
cargo = "warn"
case_sensitive_file_extension_comparisons = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
complexity = "warn"
create_dir = "warn"
decimal_literal_representation = "warn"
error_impl_error = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
lossy_float_literal = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
missing_inline_in_public_items = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
nursery = "warn"
panic_in_result_fn = "warn"
pathbuf_init_then_push = "warn"
pattern_type_mismatch = "warn"
pedantic = "warn"
perf = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
string_slice = "warn"
string_to_string = "warn"
style = "warn"
suspicious = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
verbose_file_reads = "warn"

[lints.rust]
ambiguous_negative_literals = "warn"
non_ascii_idents = "warn"
