[package]
categories = ["development-tools", "development-tools::profiling"]
description = "Perf timers for Rust"
edition = "2021"
keywords = ["timer", "timing"]
license-file = "LICENSE"
name = "voxell_timer"
repository = "https://github.com/Paladynee/timer-rs"
version = "1.2.1"

[lints.clippy]
absolute_paths = "warn"
alloc_instead_of_core = "warn"
as_underscore = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
case_sensitive_file_extension_comparisons = "warn"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
complexity = { level = "warn", priority = -1 }
create_dir = "warn"
decimal_literal_representation = "warn"
error_impl_error = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
lossy_float_literal = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
missing_inline_in_public_items = "warn"
multiple_inherent_impl = "warn"
multiple_unsafe_ops_per_block = "warn"
mutex_atomic = "warn"
nursery = { level = "warn", priority = -1 }
panic_in_result_fn = "warn"
pathbuf_init_then_push = "warn"
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_slice = "warn"
string_to_string = "warn"
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
tests_outside_test_module = "warn"
try_err = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"
verbose_file_reads = "warn"

cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
elidable_lifetime_names = "allow"
float_cmp = "allow"
ignored_unit_patterns = "allow"
new_without_default = "allow"
pattern_type_mismatch = "allow"
redundant_closure_for_method_calls = "allow"
same_name_method = "allow"
similar_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"
unreadable_literal = "allow"

[lints.rust]
ambiguous_negative_literals = "warn"
non_ascii_idents = "warn"
